syntax = "proto3";

package ic_nervous_system.pb.v1;

import "ic_base_types/pb/v1/types.proto";

message Duration {
  optional uint64 seconds = 1;
}

message GlobalTimeOfDay {
  optional uint64 seconds_after_utc_midnight = 1;
}

message Tokens {
  optional uint64 e8s = 1;
}

message Image {
  // A data URI of a png. E.g.
  // data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAD0lEQVQIHQEEAPv/AAD/DwIRAQ8HgT3GAAAAAElFTkSuQmCC
  // ^ 1 pixel containing the color #00FF0F.
  optional string base64_encoding = 1;
}

message Percentage {
  optional uint64 basis_points = 1;
}

// A list of principals.
// Needed to allow prost to generate the equivalent of Optional<Vec<PrincipalId>>.
message Principals {
  repeated ic_base_types.pb.v1.PrincipalId principals = 1;
}

// A Canister that will be transferred to an SNS.
message Canister {
  // The id of the canister.
  optional ic_base_types.pb.v1.PrincipalId id = 1;
}

// Represents a set of countries. To be used in country-specific configurations,
// e.g., to restrict the geography of an SNS swap.
message Countries {
  // ISO 3166-1 alpha-2 codes
  repeated string iso_codes = 1;
}

// Features:
//   1. Sign ('+' is optional).
//   2. Smallest positive value: 10^-28.
//   3. 96 bits of significand.
//   4. Decimal point character: '.' (dot/period).
message Decimal {
  // E.g. "3.14".
  optional string human_readable = 1;
}

// API types related to managing canister timers.

message ResetTimersRequest {}
message ResetTimersResponse {}

// TODO[NNS1-3420] This type can be refined into different internal API types, depending on
// TODO[NNS1-3420] the needs of a particular canister. The fields of this type represent
// TODO[NNS1-3420] over-approximation of the fields that might be relevant for observing and
// TODO[NNS1-3420] managing timers in nervous system-related canisters.
message Timers {
  // Indicates whether this canister (still) requires (timer-based) periodic tasks.
  //
  // May be ignored by canisters that never cancel their periodic tasks.
  optional bool requires_periodic_tasks = 1;
  optional uint64 last_reset_timestamp_seconds = 2;
  optional uint64 last_spawned_timestamp_seconds = 3;
}

message GetTimersRequest {}
message GetTimersResponse {
  optional Timers timers = 1;
}
